<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.10"
        app:layout_constraintGuide_percent="0.10"
        style="@style/guideLineHorizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.30"
        app:layout_constraintGuide_percent="0.30"
        style="@style/guideLineHorizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.45"
        app:layout_constraintGuide_percent="0.45"
        style="@style/guideLineHorizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.57"
        app:layout_constraintGuide_percent="0.57"
        style="@style/guideLineHorizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.69"
        app:layout_constraintGuide_percent="0.69"
        style="@style/guideLineHorizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.81"
        app:layout_constraintGuide_percent="0.81"
        style="@style/guideLineHorizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal0.93"
        app:layout_constraintGuide_percent="0.93"
        style="@style/guideLineHorizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical0.15"
        app:layout_constraintGuide_percent="0.15"
        style="@style/guideLineVertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical0.30"
        app:layout_constraintGuide_percent="0.30"
        style="@style/guideLineVertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical0.40"
        app:layout_constraintGuide_percent="0.40"
        style="@style/guideLineVertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical0.65"
        app:layout_constraintGuide_percent="0.65"
        style="@style/guideLineVertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical0.90"
        app:layout_constraintGuide_percent="0.90"
        style="@style/guideLineVertical"
        />



    <Button
        android:id="@+id/btnNum1"
        style="@style/btnStyle"
        android:text="@string/num1"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.15"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.15"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.81"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.81"
/>

    <Button
        android:id="@+id/btnNum2"
        android:text="@string/num2"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.40"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.40"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.81"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.81"
    />

    <Button
        android:id="@+id/btnNum3"
        android:text="@string/num3"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.65"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.65"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.81"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.81" />

    <Button
        android:id="@+id/btnNum4"
        android:text="@string/num4"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.15"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.15"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.69"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.69"
    />

    <Button
        android:id="@+id/btnNum5"
        android:text="@string/num5"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.40"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.40"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.69"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.69" />

    <Button
        android:id="@+id/btnNum6"
        android:text="@string/num6"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.65"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.65"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.69"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.69"/>

    <Button
        android:id="@+id/btnNum7"
        android:text="@string/num7"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.15"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.15"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.57"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.57"
        />

    <Button
        android:id="@+id/btnNum8"
        android:text="@string/num8"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.40"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.40"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.57"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.57"/>

    <Button
        android:id="@+id/btnNum9"
        android:text="@string/num9"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.65"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.65"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.57"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.57"/>

    <Button
        android:id="@+id/btnNum0"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_55sdp"
        android:text="@string/num0"
        android:textColor="#ffff"
        android:textSize="@dimen/_28ssp"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.30"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.30"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.93"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.93" />

    <Button
        android:id="@+id/btnEqual"
        android:text="@string/equal"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.93"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.93"
        app:backgroundTint="@android:color/holo_orange_dark" />

    <Button
        android:id="@+id/btnMulti"
        android:text="@string/multi"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.57"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.57"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/btnDivide"
        android:text="@string/divide"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.45"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.45"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.81"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.81"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/btnSub"
        android:text="@string/sub"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.69"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.69"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_62sdp"
        android:text="@string/clear"
        android:textColor="#060606"
        android:textSize="@dimen/_28ssp"
        app:backgroundTint="@android:color/darker_gray"
        app:cornerRadius="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.40"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.40"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.45"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.45" />

    <Button
        android:id="@+id/btnDot"
        android:text="@string/dot"
        android:textColor="#ffff"
        style="@style/btnStyle"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.65"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.65"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.93"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.93"
        />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="68sp"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.30"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.30" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical0.90"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.90"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.10"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>